--- a/Exercise.ipynb
+++ b/Exercise.ipynb
@@ -20,6 +20,11 @@
       "Customer: Sacha\n",
       "Purchase: Book\n",
       "ID number: 1\n",
+      "\n",
+      "Product: Enders Game\n",
+      "Customer: Phoebe\n",
+      "Purchase: Book\n",
+      "ID number: 2\n",
       "\n"
      ]
     }
@@ -72,7 +77,9 @@
     "    \n",
     "\n",
     "o1 = Order('The Lord of the Rings ', 'Sacha', 'Book')\n",
-    "print(o1)\n"
+    "print(o1)\n",
+    "o2 = Order('Enders Game', 'Phoebe', 'Book')\n",
+    "print(o2)"
    ]
   },
   {
